syntax = "proto3";

package user;

option go_package = "github.com/hervibest/be-yourmoments-backup/pb/user;userpb";

import "photo/photo.proto";


service UserService{
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc SendBulkPhotoNotification(SendBulkPhotoNotificationRequest) returns (SendBulkPhotoNotificationResponse);
}

message AuthenticateRequest{
  string token = 1;
}

message AuthenticateResponse{
  int64 status = 1; 
  string error = 2;
  User user = 3;
}

message User {
  string 	user_id = 1;
  string 	username = 2;
  string 	email = 3;
  string 	phone_number = 4;
  string  creator_id = 5;
  string  wallet_id = 6;
}

message SendBulkPhotoNotificationRequest {
  repeated photo.BulkUserSimilarPhoto bulk_user_similar_photo = 1;
}

message SendBulkPhotoNotificationResponse {
  int64 status = 1;
}